Treating all warning as errors
- Made warnings be treaded as errors, for keeping better coding style.

--- a/src/Mvc.Grid.Web/project.json
+++ b/src/Mvc.Grid.Web/project.json
@@ -11,6 +11,10 @@
     "NonFactors.Grid.Mvc6": "0.8.0-beta8"
   },
 
+  "compilationOptions": {
+    "warningsAsErrors": true
+  },
+
   "commands": {
     "web": "Microsoft.AspNet.Server.Kestrel"
   },
