--- a/src/Mvc.Grid.Web/project.json
+++ b/src/Mvc.Grid.Web/project.json
@@ -1,14 +1,15 @@
 ﻿{
   "webroot": "wwwroot",
-  "version": "0.8.0",
+  "version": "0.9.0",
 
   "dependencies": {
-    "Microsoft.AspNet.Diagnostics": "1.0.0-beta8",
-    "Microsoft.AspNet.IISPlatformHandler": "1.0.0-beta8",
-    "Microsoft.AspNet.Mvc": "6.0.0-beta8",
-    "Microsoft.AspNet.Server.Kestrel": "1.0.0-beta8",
-    "Microsoft.AspNet.StaticFiles": "1.0.0-beta8",
-    "NonFactors.Grid.Mvc6": "0.8.0-beta8"
+    "NonFactors.Grid.Mvc6": "0.9.0-rc1-final",
+
+    "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
+    "Microsoft.AspNet.Diagnostics": "1.0.0-rc1-final",
+    "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
+    "Microsoft.AspNet.Server.Kestrel": "1.0.0-rc1-final",
+    "Microsoft.AspNet.IISPlatformHandler": "1.0.0-rc1-final"
   },
 
   "compilationOptions": {
