--- a/src/Mvc.Grid.Web/project.json
+++ b/src/Mvc.Grid.Web/project.json
@@ -1,36 +1,34 @@
 ﻿{
   "webroot": "wwwroot",
-  "version": "0.9.0",
+  "version": "0.9.5",
 
   "dependencies": {
-    "NonFactors.Grid.Mvc6": "0.9.0-rc1-final",
+    "NonFactors.Grid.Mvc6": "0.9.5-rc2-final",
 
     "EPPlus": "4.0.4",
-    "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
-    "Microsoft.AspNet.Diagnostics": "1.0.0-rc1-final",
-    "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
-    "Microsoft.AspNet.Server.Kestrel": "1.0.0-rc1-final",
-    "Microsoft.AspNet.IISPlatformHandler": "1.0.0-rc1-final"
+    "Microsoft.AspNetCore.Mvc": "1.0.0-rc2-final",
+    "Microsoft.AspNetCore.Diagnostics": "1.0.0-rc2-final",
+    "Microsoft.AspNetCore.StaticFiles": "1.0.0-rc2-final",
+    "Microsoft.AspNetCore.Server.Kestrel": "1.0.0-rc2-final",
+    "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0-rc2-final"
   },
 
-  "compilationOptions": {
-    "warningsAsErrors": true
-  },
-
-  "commands": {
-    "web": "Microsoft.AspNet.Server.Kestrel"
+  "buildOptions": {
+    "preserveCompilationContext": true,
+    "warningsAsErrors": true,
+    "emitEntryPoint": true
   },
 
   "frameworks": {
-    "dnx451": { }
+    "net451": {
+    }
   },
 
-  "exclude": [
-    "wwwroot",
-    "node_modules"
-  ],
-  "publishExclude": [
-    "**.user",
-    "**.vspscc"
-  ]
+  "publishOptions": {
+    "include": [
+      "web.config",
+      "wwwroot",
+      "Views"
+    ]
+  }
 }
