--- a/src/Mvc.Grid.Web/project.json
+++ b/src/Mvc.Grid.Web/project.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "NonFactors.Grid.Mvc6": "1.3.0",
 
-    "EPPlus.Core": "1.0.2",
+    "EPPlus": "4.1.0",
     "Microsoft.AspNetCore.Mvc": "1.1.0",
     "Microsoft.AspNetCore.Diagnostics": "1.1.0",
     "Microsoft.AspNetCore.StaticFiles": "1.1.0",
@@ -26,15 +26,7 @@
   },
 
   "frameworks": {
-    "net46": {},
-    "netcoreapp1.1": {
-      "dependencies": {
-        "Microsoft.NETCore.App": {
-          "version": "1.1.0",
-          "type": "platform"
-        }
-      }
-    }
+    "net46": { }
   },
 
   "publishOptions": {
