--- a/Mvc.Grid.Web/Mvc.Grid.Web.csproj
+++ b/Mvc.Grid.Web/Mvc.Grid.Web.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Nullable>enable</Nullable>
-    <VersionPrefix>6.0.1</VersionPrefix>
+    <VersionPrefix>6.1.0</VersionPrefix>
     <GenerateFullPaths>true</GenerateFullPaths>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -11,8 +11,12 @@
 
   <ItemGroup>
     <PackageReference Include="EPPlus.Core" Version="1.5.4" />
-    <PackageReference Include="NonFactors.Grid.Mvc6" Version="6.0.1" />
+    <PackageReference Include="NonFactors.Grid.Mvc6" Version="6.1.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.0" />
   </ItemGroup>
 
+  <Target Name="PrePublishScript" BeforeTargets="PrepareForPublish">
+    <Exec Command="npm install" />
+    <Exec Command="npm run gulp minify" />
+  </Target>
 </Project>
